--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
 
-    <ImageView
+    <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/ivProfileImage"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -30,7 +30,7 @@
     <TextView
         android:id="@+id/tvBody"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_below="@id/tvSvreenName"
         android:layout_marginStart="5dp"
         android:layout_marginTop="0dp"
