--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -8,35 +8,36 @@
 
     <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/ivProfileImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="87dp"
+        android:layout_height="77dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/tvSvreenName"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="5dp"
         android:layout_toEndOf="@id/ivProfileImage"
         android:fontFamily="serif"
         android:lineSpacingExtra="8sp"
         android:text="Pachuco pasco"
         android:textAllCaps="true"
-        android:textColor="#1A237E"
-        android:textSize="18sp"
-        android:textStyle="bold|italic"
+        android:textColor="#FF3D00"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:typeface="serif" />
 
     <TextView
         android:id="@+id/tvBody"
-        android:layout_width="wrap_content"
-        android:layout_height="36dp"
+        android:layout_width="346dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/tvSvreenName"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
         android:layout_toEndOf="@id/ivProfileImage"
         android:fontFamily="serif"
         android:text="This is my tweet! I'ts my own opinion."
-        android:textColor="#010101"
-        android:textSize="14sp" />
+        android:textColor="#110000"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 </RelativeLayout>
