--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@android:color/transparent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
 
@@ -22,7 +23,7 @@
         android:lineSpacingExtra="8sp"
         android:text="Pachuco pasco"
         android:textAllCaps="true"
-        android:textColor="#FF3D00"
+        android:textColor="#72646E"
         android:textSize="24sp"
         android:textStyle="bold"
         android:typeface="serif" />
